Updated context path

--- a/springboot-sample-ssl/src/main/resources/application-dev.yml
+++ b/springboot-sample-ssl/src/main/resources/application-dev.yml
@@ -1,7 +1,7 @@
 server:
   port: 8110
   servlet:
-    contextPath: /first
+    contextPath: /secured
   ssl:
     key-alias: sample_server
     key-password: sample
